fix swagger ui, fix auth
